Fix blog-button-container-form overflow by adding width 120px

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -24,6 +24,12 @@ input[type="file"]{
     height: 35px;
 }
 
+.blog-buttons-container-form{
+    position: relative;
+    left: 20%;
+    width: 120px;
+}
+
 .blog-button{
     display: flex;
     justify-content: center;
