--- a/app/assets/stylesheets/pages/blogs/_new.scss
+++ b/app/assets/stylesheets/pages/blogs/_new.scss
@@ -30,8 +30,3 @@ textarea.text {
     min-height: 500px;
     border: 2px solid #ccc;
 }
-
-.blog-buttons-container-form{
-    position: relative;
-    left: 20%;
-}
